--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>recipes, bery cool</h1>
+    <ul>
+        <li><a href="recipes/apples_in_broth.html">Яблоки у курином бульоне &#128523 &#128525</a></li>
+        <li><a href="recipes/plov.html"></a>Плов (смешная версия для тех кто любит посмеяться и не много пошутить. и смех и грех как говорится)</li>
+        <li><a href="recipes/cereal.html">cereal</a></li>
+    </ul>
 </body>
 </html>
