Write out the apples recipe

--- a/recipes/apples_in_broth.html
+++ b/recipes/apples_in_broth.html
@@ -6,7 +6,24 @@
     <title>Яблоки у курином бульоне</title>
 </head>
 <body>
-    <h1>Яблоки у курином бульоне &#129316</h1>
-    
+    <h1>Яблоки у курином бульоне &#129316 </h1>
+    <img src="apples1.gif" alt="яблоки">
+    <h2>Ингредлиенты</h2>
+    <ul>
+        <li>яблоки</li>
+        <li>куриця</li>
+        <li>апельсин</li>
+        <li>перчик (горошек)</li>
+    </ul>
+    <h2>шаги пригтовление</h2>
+    <ol>
+        <li>свари бульён из курятина</li>
+        <li>покроши туда ошметки курятина</li>
+        <li>нарежь туда яблоки и апельсин и еще каких то фурктов</li>
+        <li>соль и специи по вкусу</li>
+        <li>вари на протяжение 5 минут</li>
+    </ol>
+    <p>Ну от и всё. яблоки у курином бульоне готов. Моё лицо:</p>
+    <img src="myface1.gif" alt="моё лицо">
 </body>
 </html>
