write out the plov recipe

--- a/recipes/apples_in_broth.html
+++ b/recipes/apples_in_broth.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Яблоки у курином бульоне &#129316 </h1>
-    <img src="apples1.gif" alt="яблоки">
+    <img src="apples1.gif" alt="яблоки" height="250">
+    <h2>описание</h2>
+    <p>Сегодня дорогие друзья мы будем готовить такой вот интересный необычный рецепт. Подписываетесь на мой каналд в телеграме.</p>
+    <p>Данный ерцеп состоит из яблок, сваренных в пальчикооблизовательном курином бульоне, от которого сложно отказаться.</p>
     <h2>Ингредлиенты</h2>
     <ul>
         <li>яблоки</li>
@@ -23,7 +26,8 @@
         <li>соль и специи по вкусу</li>
         <li>вари на протяжение 5 минут</li>
     </ol>
-    <p>Ну от и всё. яблоки у курином бульоне готов. Моё лицо:</p>
-    <img src="myface1.gif" alt="моё лицо">
+    <h2>Ну от и всё.</h2>
+         <p>яблоки у курином бульоне готов. Моё лицо:</p>
+    <img src="myface1.gif" alt="моё лицо" height="250" >
 </body>
 </html>
