--- a/recipes/plov.html
+++ b/recipes/plov.html
@@ -7,5 +7,31 @@
 </head>
 <body>
     <h1>Plov</h1>
+    <img src="plov.jpg" alt="plov" height="200">
+    <h2>описание</h2>
+    <p> сегондя дророгие друпзия мы будем готовить смешной <strong>плов</strong> для людлей который дюбят пустить <strong>смешинку</strong> по поводу и без.</p>
+    <p> велдь как говорится тот кто любитп посмеяться любит и <strong>мурости</strong> набраться. иными словами, это будет интересный и необычный <strong>плов</strong>, по одноимённому юмористическому обсцентному стишку</p>
+    <h2>ингредиенты</h2>
+    <img src="hahaplov.png" alt="hahaplov" height="150">
+    <ul>
+        <li>укроп </li>
+        <li>кошачья жопа</li>
+        <li>25 картошек</li>
+        <li>17 мандавошек</li>
+        <li>вода 20л</li>
+        <li>пенис </li>
+        <li>Охапка дров</li> 
+    </ul>
+    <h2>шаги приготовление (извините за вульгарность)) <img src="sticker.webp" alt="hatsune miku" height="100"></h2>
+    <ol>
+        <li>Берём сначал <strong>укропу</strong>!</li>
+        <li>Потом кошачью <strong>жопу</strong>!</li>
+        <li>25 <strong>картошек</strong>!</li>
+        <li>17 <strong>мандавошек</strong>!</li>
+        <li>Ведро воды и <strong>хуй</strong> туды!</li>
+        <li>Охапка дров и <strong>плов</strong> готов!</li>
+    </ol>
+    <img src="axyplov.jpg" alt="axyplov">
+    <h2>в заключение</h2>
 </body>
 </html>
