add back buttons to pages, write out cereal recipe

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Recipers!</title>
 </head>
 <body>
-    <h1>recipes, bery cool</h1>
+    <h1>recipes <img src="KONG.webp" height =100></a>, bery cool</h1>
     <ul>
         <li><a href="recipes/apples_in_broth.html">Яблоки у курином бульоне &#128523 &#128525</a></li>
-        <li><a href="recipes/plov.html">Плов (смешная версия для тех кто любит посмеяться и не много пошутить. и смех и грех как говорится)</a></li>
+        <li><a href="recipes/plov.html">Плов (смешная версия для тех кто любит посмеяться и немного пошутить. и смех и грех как говорится)</a></li>
         <li><a href="recipes/cereal.html">cereal</a></li>
     </ul>
 </body>
