--- a/recipes/apples_in_broth.html
+++ b/recipes/apples_in_broth.html
@@ -29,5 +29,6 @@
     <h2>Ну от и всё.</h2>
          <p>яблоки у курином бульоне готов. Моё лицо:</p>
     <img src="myface1.gif" alt="моё лицо" height="250" >
+    <a href="../index.html" >ВЕРНУТСЯ</a>
 </body>
 </html>
