--- a/recipes/cereal.html
+++ b/recipes/cereal.html
@@ -7,5 +7,22 @@
 </head>
 <body>
     <h1>ceral</h1>
+    <img src="froot-loops-cereal-bowl.webp" alt="froot loops" height="300">
+    <h2>описание</h2>
+    <p>это рецепт хлопьев с молоком пал. смотри и учись <img src="sans.png" alt="sans" height="50"></p>
+    
+    <h2>ингредиенты <img src="cereals.webp" alt="cerals" height="200"></h2>
+    <ul>
+        <li>молоко</li>
+        <li>любые хлопья (в т.ч. cock flakes)</li>
+    </ul>
+    <h2>cgjcj, ghbujnjdktybz (modus operandi)</h2>
+    <ol>
+        <li>насыпать хлопья в сиску</li>
+        <li>налить сиску в миску</li>
+        <li>сладкую писку</li>
+    </ol>
+    <img src="skill-issue.gif" alt="ryahn gosing eating ceral" height="200">
+    <a href="../index.html" >ВЕРНУТСЯ</a>
 </body>
 </html>
