--- a/recipes/plov.html
+++ b/recipes/plov.html
@@ -33,5 +33,6 @@
     </ol>
     <img src="axyplov.jpg" alt="axyplov">
     <h2>в заключение</h2>
+    <a href="../index.html" >ВЕРНУТСЯ</a>
 </body>
 </html>
