add another gif to the index page

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <li><a href="recipes/plov.html">Плов (смешная версия для тех кто любит посмеяться и немного пошутить. и смех и грех как говорится)</a></li>
         <li><a href="recipes/cereal.html">cereal</a></li>
     </ul>
+    <img src="recipes/sunnyfication.gif" alt="">
 </body>
 </html>
